--- a/public/index.html
+++ b/public/index.html
@@ -44,12 +44,12 @@
 					</h1>
 				</div>
 				<div class="lg:hidden">
-					<button id="hamburger-open" onclick="">
+					<div id="hamburger-open" class="cursor-pointer">
 						<i
 							class="fa-solid fa-bars text-2xl text-white"
 							id="hamburger-open-bars"
 						></i>
-					</button>
+					</div>
 				</div>
 				<nav
 					class="absolute z-50 lg:static lg:flex justify-between items-center lg:top-0 w-full lg:w-auto h-[25rem] lg:h-auto nonactive left-0 bg-white lg:bg-transparent mx-auto lg:mx-0 transition-all lg:transition-none ease-in-out duration-300"
@@ -99,7 +99,9 @@
 						</a>
 
 						<button type="button" id="hamburger-close" class="lg:hidden">
-							<i class="fa-solid fa-xmark absolute top-6 text-xl right-8"></i>
+							<i
+								class="fa-solid fa-xmark absolute top-6 text-xl right-8 cursor-pointer"
+							></i>
 						</button>
 					</div>
 				</nav>
@@ -111,10 +113,10 @@
 			</div>
 		</header>
 
-		<section id="home" class="pt-[4rem] lg:pt-28 bg-dasar h-screen mb-96">
-			<div class="container">
+		<section id="home" class="pt-[6rem] lg:pt-28 bg-dasar h-screen mb-96">
+			<div class="">
 				<div
-					class="flex flex-wrap lg:flex-nowrap lg:flex-row justify-center lg:px-24"
+					class="flex flex-wrap lg:flex-nowrap lg:flex-row justify-center lg:px-24 container"
 				>
 					<div class="w-full lg:px-4">
 						<h1 class="text-3xl lg:text-6xl font-bold lg:text-start text-white">
@@ -133,10 +135,12 @@
 						</div>
 					</div>
 
-					<div class="w-full self-end px-4">
-						<div class="relative mt-10 lg:mt-9 lg:right-0">
-							<img src="../img/hero.png" class="mx-auto" alt="" />
-						</div>
+					<div class="w-[25rem] h-[25rem] mt-10">
+						<img
+							src="../img/hero.png"
+							class="object-cover w-full h-full"
+							alt=""
+						/>
 					</div>
 				</div>
 			</div>
