--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
 			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
 			rel="stylesheet"
 		/>
-
 		<link
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
 			rel="stylesheet"
@@ -44,12 +43,12 @@
 					</h1>
 				</div>
 				<div class="lg:hidden">
-					<div id="hamburger-open" class="cursor-pointer">
+					<button id="hamburger-open" onclick="">
 						<i
 							class="fa-solid fa-bars text-2xl text-white"
 							id="hamburger-open-bars"
 						></i>
-					</div>
+					</button>
 				</div>
 				<nav
 					class="absolute z-50 lg:static lg:flex justify-between items-center lg:top-0 w-full lg:w-auto h-[25rem] lg:h-auto nonactive left-0 bg-white lg:bg-transparent mx-auto lg:mx-0 transition-all lg:transition-none ease-in-out duration-300"
@@ -97,26 +96,21 @@
 						>
 							<span class="py-2">Login</span>
 						</a>
-
 						<button type="button" id="hamburger-close" class="lg:hidden">
-							<i
-								class="fa-solid fa-xmark absolute top-6 text-xl right-8 cursor-pointer"
-							></i>
+							<i class="fa-solid fa-xmark absolute top-6 text-xl right-8"></i>
 						</button>
 					</div>
 				</nav>
-
 				<div
 					class="w-full lg:hidden h-screen z-40 absolute bg-black opacity-50 hidden top-0 left-0 transition-all duration-300 ease-in-out"
 					id="overlay"
 				></div>
 			</div>
 		</header>
-
-		<section id="home" class="pt-[6rem] lg:pt-28 bg-dasar h-screen mb-96">
-			<div class="">
+		<section id="home" class="pt-[4rem] lg:pt-28 bg-dasar h-screen mb-96">
+			<div class="container">
 				<div
-					class="flex flex-wrap lg:flex-nowrap lg:flex-row justify-center lg:px-24 container"
+					class="flex flex-wrap lg:flex-nowrap lg:flex-row justify-center lg:px-24"
 				>
 					<div class="w-full lg:px-4">
 						<h1 class="text-3xl lg:text-6xl font-bold lg:text-start text-white">
@@ -134,17 +128,54 @@
 							></a>
 						</div>
 					</div>
-
-					<div class="w-[25rem] h-[25rem] mt-10">
-						<img
-							src="../img/hero.png"
-							class="object-cover w-full h-full"
-							alt=""
-						/>
+					<div class="w-full self-end px-4">
+						<div class="relative mt-10 lg:mt-9 lg:right-0">
+							<img src="../img/hero.png" class="mx-auto" alt="" />
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<script src="../src/js/index.js"></script>
+
+		<script>
+			const navbarNav = document.querySelector("#navbar-menu");
+			const hamburgerOpen = document.querySelector("#hamburger-open");
+			const hamburgerClose = document.querySelector("#hamburger-close");
+			const overlay = document.querySelector("#overlay");
+
+			const toggleMenu = () => {
+				hamburgerOpen.classList.toggle("active");
+				hamburgerOpen.classList.toggle("nonactive");
+				navbarNav.classList.toggle("active");
+				navbarNav.classList.toggle("nonactive");
+				overlay.classList.toggle("block");
+				overlay.classList.toggle("hidden");
+			};
+
+			hamburgerOpen.addEventListener("click", toggleMenu);
+			hamburgerClose.addEventListener("click", toggleMenu);
+
+			window.addEventListener("scroll", function () {
+				const header = document.querySelector("header");
+				const fixedNav = header.offsetTop;
+				const homepageBars = document.querySelector("#hamburger-open-bars");
+				const logo = document.querySelector("#logo");
+				const navbarUl = document.querySelector("#navbar-ul");
+
+				if (window.pageYOffset > fixedNav) {
+					header.classList.remove("homepage-header");
+					header.classList.add("navbar-fixed");
+					logo.classList.replace("text-white", "text-black");
+					homepageBars.classList.replace("text-white", "text-black");
+					navbarUl.classList.replace("lg:text-white", "lg:text-black");
+				} else {
+					header.classList.add("homepage-header");
+					header.classList.remove("navbar-fixed");
+					logo.classList.replace("text-black", "text-white");
+					homepageBars.classList.replace("text-black", "text-white");
+					navbarUl.classList.replace("lg:text-black", "lg:text-white");
+				}
+			});
+		</script>
 	</body>
 </html>
