--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 					</button>
 				</div>
 				<nav
-					class="absolute z-50 lg:static lg:flex justify-between items-center lg:top-0 w-full lg:w-auto h-[25rem] lg:h-auto nonactive left-0 bg-white lg:bg-transparent mx-auto lg:mx-0 transition-all lg:transition-none ease-in-out duration-300"
+					class="absolute z-50 lg:static lg:flex justify-between items-center lg:top-0 w-full lg:w-auto h-[25rem] lg:h-auto nonactive left-0 bg-white lg:bg-transparent mx-auto lg:mx-0 ease-in-out duration-300"
 					id="navbar-menu"
 				>
 					<div
