--- a/public/index.html
+++ b/public/index.html
@@ -180,12 +180,13 @@
 		<!-- End Section 1 -->
 
 		<!-- Section 2 -->
-		<section class="mb-96">
+		<section class="mb-20">
 			<div class="container">
 				<div>
 					<div class="flex flex-wrap gap-5">
 						<div
-							class="w-full h-[10rem] rounded-xl bg-gradient-to-tr from-transparent to-pink-500"
+							data-aos="fade-right"
+							class="w-full h-[10rem] rounded-xl bg-gradient-to-tr from-pink-300 to-pink-600"
 						>
 							<div
 								class="w-full h-full flex justify-center items-center flex-col text-white"
@@ -195,42 +196,91 @@
 							</div>
 						</div>
 						<div
+							data-aos="fade-left"
 							class="w-full h-[10rem] rounded-xl bg-gradient-to-r from-yellow-400 to-amber-200"
-						></div>
+						>
+							<div
+								class="w-full h-full flex justify-center items-center flex-col text-white"
+							>
+								<i class="fa-solid fa-tablet-screen-button text-4xl"></i>
+								<h1 class="font-medium text-2xl mt-4">Inspirasi</h1>
+							</div>
+						</div>
 						<div
+							data-aos="fade-right"
 							class="w-full h-[10rem] rounded-xl bg-gradient-to-r from-sky-400 to-purple-300"
-						></div>
+						>
+							<div
+								class="w-full h-full flex justify-center items-center flex-col text-white"
+							>
+								<i class="fa-solid fa-palette text-4xl"></i>
+								<h1 class="font-medium text-2xl mt-4">Kreativitas</h1>
+							</div>
+						</div>
 						<div
+							data-aos="fade-left"
 							class="w-full h-[10rem] rounded-xl bg-gradient-to-br from-red-500 to-red-200"
-						></div>
+						>
+							<div
+								class="w-full h-full flex justify-center items-center flex-col text-white"
+							>
+								<i class="fa-solid fa-street-view text-4xl"></i>
+								<h1 class="font-medium text-2xl mt-4">Self-discovery</h1>
+							</div>
+						</div>
 					</div>
 					<div data-aos="fade-right" data-aos-duration="1500" class="mt-8">
-						<h1 class="font-bold text-4xl">Kenapa harus membaca buku?</h1>
-						<p class="text-text-abu text-lg font-medium mt-2">
-							Membaca buku membantu meningkatkan wawasan dan pemahaman tentang
-							berbagai topik, mulai dari ilmu pengetahuan, sejarah, sastra,
-							hingga budaya dan seni.
-						</p>
-						<p class="text-text-abu text-lg font-medium mt-2">
-							Membaca buku merangsang perkembangan kognitif kita.Ini membantu
-							meningkatkan kemampuan berpikir kritis, logika, serta kemampuan
-							berbicara dan menulis.
-						</p>
-						<p class="text-text-abu text-lg font-medium mt-2">
-							Buku membantu membangkitkan imajinasi dan kreativitas kita. Ketika
-							membaca, kita seringkali membayangkan dunia dan karakter yang ada
-							dalam buku tersebut.
-						</p>
-						<p class="text-text-abu text-lg font-medium mt-2">
-							Membaca buku juga dapat menjadi cara yang baik untuk bersantai dan
-							menghibur diri. Buku juga dapat menjadi teman yang setia dalam
-							waktu luang dan mengisi kekosongan.
-						</p>
+						<h1 class="font-bold text-4xl mb-2">Kenapa harus membaca buku?</h1>
+
+						<div class="flex gap-4 items-center">
+							<i class="fa-solid fa-check"></i>
+							<p class="text-text-abu text-base font-medium mt-2">
+								Membaca buku membantu meningkatkan wawasan dan pemahaman tentang
+								berbagai topik, mulai dari ilmu pengetahuan, sejarah, sastra,
+								hingga budaya dan seni.
+							</p>
+						</div>
+						<div class="flex gap-4 items-center">
+							<i class="fa-solid fa-check"></i>
+							<p class="text-text-abu text-base font-medium mt-2">
+								Membaca buku merangsang perkembangan kognitif kita.Ini membantu
+								meningkatkan kemampuan berpikir kritis, logika, serta kemampuan
+								berbicara dan menulis.
+							</p>
+						</div>
+						<div class="flex gap-4 items-center">
+							<i class="fa-solid fa-check"></i>
+							<p class="text-text-abu text-base font-medium mt-2">
+								Buku membantu membangkitkan imajinasi dan kreativitas kita.
+								Ketika membaca, kita seringkali membayangkan dunia dan karakter
+								yang ada dalam buku tersebut.
+							</p>
+						</div>
+						<div class="flex gap-4 items-center">
+							<i class="fa-solid fa-check"></i>
+							<p class="text-text-abu text-base font-medium mt-2">
+								Membaca buku juga dapat menjadi cara yang baik untuk bersantai
+								dan menghibur diri. Buku juga dapat menjadi teman yang setia
+								dalam waktu luang dan mengisi kekosongan.
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!-- End Section 2 -->
+
+		<!-- Section 3 -->
+		<section class="bg-dasar mb-96">
+			<div class="container">
+				<div class="pt-4">
+					<h2 class="font-bold text-xl text-white whitespace-nowrap">
+						Alasan harus menggunakan BookVerse
+					</h2>
+				</div>
+			</div>
+		</section>
+		<!-- End Section 3 -->
 
 		<script>
 			const navbarNav = document.querySelector("#navbar-menu");
