--- a/public/index.html
+++ b/public/index.html
@@ -274,7 +274,7 @@
 		<section class="bg-dasar mb-96">
 			<div class="container">
 				<div class="pt-4">
-					<h2 class="font-bold text-xl text-white whitespace-nowrap">
+					<h2 class="font-bold text-xl text-white">
 						Alasan harus menggunakan BookVerse
 					</h2>
 				</div>
