--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 					</button>
 				</div>
 				<nav
-					class="absolute z-50 lg:static lg:flex justify-between items-center lg:top-0 w-full lg:w-auto h-[25rem] lg:h-auto nonactive left-0 bg-white lg:bg-transparent mx-auto lg:mx-0 ease-in-out duration-300"
+					class="absolute z-50 lg:static lg:flex justify-between items-center lg:top-0 w-full lg:w-auto h-[25rem] lg:h-auto nonactive left-0 bg-white lg:bg-transparent mx-auto lg:mx-0 transition duration-300 ease-in-out"
 					id="navbar-menu"
 				>
 					<div
@@ -181,9 +181,9 @@
 
 		<!-- Section 2 -->
 		<section class="mb-20">
-			<div class="container">
+			<div class="">
 				<div>
-					<div class="flex flex-wrap gap-5">
+					<div class="flex flex-wrap gap-5 overflow-hidden container">
 						<div
 							data-aos="fade-right"
 							class="w-full h-[10rem] rounded-xl bg-gradient-to-tr from-pink-300 to-pink-600"
@@ -229,7 +229,12 @@
 							</div>
 						</div>
 					</div>
-					<div data-aos="fade-right" data-aos-duration="1500" class="mt-8">
+
+					<div
+						data-aos="fade-right"
+						data-aos-duration="1500"
+						class="mt-8 container"
+					>
 						<h1 class="font-bold text-4xl mb-2">Kenapa harus membaca buku?</h1>
 
 						<div class="flex gap-4 items-center">
