--- a/public/index.html
+++ b/public/index.html
@@ -181,9 +181,9 @@
 
 		<!-- Section 2 -->
 		<section class="mb-20">
-			<div class="">
+			<div class="container">
 				<div>
-					<div class="flex flex-wrap gap-5 overflow-hidden container">
+					<div class="flex flex-wrap gap-5 overflow-hidden">
 						<div
 							data-aos="fade-right"
 							class="w-full h-[10rem] rounded-xl bg-gradient-to-tr from-pink-300 to-pink-600"
@@ -230,11 +230,7 @@
 						</div>
 					</div>
 
-					<div
-						data-aos="fade-right"
-						data-aos-duration="1500"
-						class="mt-8 container"
-					>
+					<div data-aos="fade-right" data-aos-duration="1500" class="mt-8">
 						<h1 class="font-bold text-4xl mb-2">Kenapa harus membaca buku?</h1>
 
 						<div class="flex gap-4 items-center">
@@ -279,9 +275,7 @@
 		<section class="bg-dasar mb-96">
 			<div class="container">
 				<div class="pt-4">
-					<h2 class="font-bold text-xl text-white">
-						Alasan harus menggunakan BookVerse
-					</h2>
+					<h2 class="font-bold text-xl text-white">Alasan h</h2>
 				</div>
 			</div>
 		</section>
