fix aos animation feature

--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@
 						<h1 class="font-bold text-4xl mb-2">Kenapa harus membaca buku?</h1>
 
 						<div class="flex gap-4 items-center">
-							<i class="fa-solid fa-check"></i>
+							<i class="fa-solid fa-check text-blue-400"></i>
 							<p class="text-text-abu text-base font-medium mt-2">
 								Membaca buku membantu meningkatkan wawasan dan pemahaman tentang
 								berbagai topik, mulai dari ilmu pengetahuan, sejarah, sastra,
@@ -242,7 +242,7 @@
 							</p>
 						</div>
 						<div class="flex gap-4 items-center">
-							<i class="fa-solid fa-check"></i>
+							<i class="fa-solid fa-check text-blue-400"></i>
 							<p class="text-text-abu text-base font-medium mt-2">
 								Membaca buku merangsang perkembangan kognitif kita.Ini membantu
 								meningkatkan kemampuan berpikir kritis, logika, serta kemampuan
@@ -250,7 +250,7 @@
 							</p>
 						</div>
 						<div class="flex gap-4 items-center">
-							<i class="fa-solid fa-check"></i>
+							<i class="fa-solid fa-check text-blue-400"></i>
 							<p class="text-text-abu text-base font-medium mt-2">
 								Buku membantu membangkitkan imajinasi dan kreativitas kita.
 								Ketika membaca, kita seringkali membayangkan dunia dan karakter
@@ -258,7 +258,7 @@
 							</p>
 						</div>
 						<div class="flex gap-4 items-center">
-							<i class="fa-solid fa-check"></i>
+							<i class="fa-solid fa-check text-blue-400"></i>
 							<p class="text-text-abu text-base font-medium mt-2">
 								Membaca buku juga dapat menjadi cara yang baik untuk bersantai
 								dan menghibur diri. Buku juga dapat menjadi teman yang setia
@@ -272,11 +272,71 @@
 		<!-- End Section 2 -->
 
 		<!-- Section 3 -->
-		<section class="bg-dasar mb-96">
+		<section class="bg-dasar mb-96 pb-16 rounded-br-[3rem]">
 			<div class="container">
-				<div class="pt-4">
-					<h2 class="font-bold text-xl text-white">Alasan h</h2>
+				<div class="pt-8 text-white">
+					<h2 class="text-base font-medium">
+						Alasan harus menggunakan Bookverse
+					</h2>
+					<h1 class="text-3xl font-bold py-2">Layanan Bookverse</h1>
+					<p class="text-sm opacity-80">
+						Bersama kami, Anda mendapatkan Buku Online dalam waktu yang cepat,
+						hemat anggaran, serta website yang telah kami optimalkan dan
+						tampilan layanan yang profesional!
+					</p>
 				</div>
+				<main class="mt-8 overflow-hidden">
+					<div class="grid grid-cols-2 gap-4">
+						<div class="gridlayout" data-aos="fade-down">
+							<div class="gridlayoutbox bg-red-icon bg-opacity-20">
+								<i class="fa-solid fa-paw text-red-400"></i>
+							</div>
+							<main class="mt-[45%] container">
+								<h1 class="font-bold">WorldCat</h1>
+								<p class="text-[0.5rem]">
+									Menyajikan informasi terperinci tentang koleksi buku global!
+								</p>
+							</main>
+						</div>
+
+						<div class="gridlayout" data-aos="fade-left">
+							<div class="gridlayoutbox bg-yellow-400 bg-opacity-20">
+								<i class="fa-solid fa-layer-group text-yellow-500"></i>
+							</div>
+							<main class="mt-[45%] container">
+								<h1 class="font-bold">LibraryThing</h1>
+								<p class="text-[0.5rem]">
+									Menyediakan katalog online dengan informasi lengkap!
+								</p>
+							</main>
+						</div>
+
+						<div class="gridlayout" data-aos="fade-right">
+							<div class="gridlayoutbox bg-blue-400 bg-opacity-20">
+								<i class="fa-solid fa-circle-check text-blue-500"></i>
+							</div>
+							<main class="mt-[45%] container">
+								<h1 class="font-bold">Goodreads</h1>
+								<p class="text-[0.5rem]">
+									Platform yang memuat daftar lengkap buku beserta informasi
+									rinci!
+								</p>
+							</main>
+						</div>
+
+						<div class="gridlayout" data-aos="fade-up">
+							<div class="gridlayoutbox bg-slate-400 bg-opacity-20">
+								<i class="fa-solid fa-book-open-reader text-slate-500"></i>
+							</div>
+							<main class="mt-[45%] container">
+								<h1 class="font-bold">Open Library</h1>
+								<p class="text-[0.5rem]">
+									Koleksi buku digital yang menarik untuk dijelajahi!
+								</p>
+							</main>
+						</div>
+					</div>
+				</main>
 			</div>
 		</section>
 		<!-- End Section 3 -->
