fix mobile homepage

--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
 						class="w-full h-full mx-auto pt-6 lg:pt-0 mt-20 md:mt-20 lg:mt-0 scale-150 lg:scale-100 pr-2 lg:pr-0"
 					>
 						<img
-							src="../img/hero.png"
+							src="../img/hero.webp"
 							class="w-full h-full object-cover"
 							alt=""
 						/>
@@ -162,7 +162,7 @@
 			<div class="container">
 				<div>
 					<div data-aos="fade" data-aos-duration="2000">
-						<img src="../img/book-icon.png" alt="" />
+						<img src="../img/book-icon.webp" alt="" />
 					</div>
 					<div data-aos="fade-right" data-aos-duration="1500">
 						<h1 class="font-bold text-4xl">Kenapa harus membaca buku?</h1>
@@ -272,7 +272,7 @@
 		<!-- End Section 2 -->
 
 		<!-- Section 3 -->
-		<section class="bg-dasar mb-96 pb-16 rounded-br-[3rem]">
+		<section class="bg-dasar mb-20 pb-16 rounded-br-[3rem]">
 			<div class="container">
 				<div class="pt-8 text-white">
 					<h2 class="text-base font-medium">
@@ -339,7 +339,87 @@
 				</main>
 			</div>
 		</section>
+
 		<!-- End Section 3 -->
+
+		<!-- Section 4 -->
+		<section class="mb-20 w-full bg-cover">
+			<div class="container">
+				<div class="flex justify-between items-center">
+					<div>
+						<h1 class="font-bold text-3xl leading-none mb-4">
+							Mulai Baca<br />Sekarang.
+						</h1>
+						<a
+							href=""
+							class="px-4 py-2 rounded-full bg-black hover:bg-dasar transition duration-300 ease-in-out hover:text-black text-dasar text-sm"
+							>Baca Buku</a
+						>
+					</div>
+					<div class="">
+						<div
+							data-aos="fade-down"
+							class="w-28 shadow-md overflow-hidden rounded-sm relative top-8"
+						>
+							<img
+								src="../img/konosuba.webp"
+								alt=""
+								class="w-full h-full object-cover right-8"
+							/>
+						</div>
+						<div
+							data-aos="fade-up"
+							class="w-28 shadow-md overflow-hidden rounded-sm relative z-10 -top-16 right-8"
+						>
+							<img
+								src="../img/konosuba.webp"
+								alt=""
+								class="w-full h-full object-cover right-8"
+							/>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Section 4 -->
+
+		<footer class="py-20 bg-dasar">
+			<div class="container">
+				<div>
+					<h1 class="text-4xl text-white font-bold">Bookverse</h1>
+					<p class="text-white font-semibold">
+						Bookverse adalah situs perpustakaan online, penyedia e-book
+						berbahasa indonesia, mulai dari novel sampai skripsi.
+					</p>
+				</div>
+				<hr class="mt-2" />
+				<div class="text-white mt-4">
+					<h1 class="font-bold">Menu cepat</h1>
+					<ul class="flex flex-col justify-start gap-4 items-start">
+						<li><a href="#" class="">Beranda</a></li>
+						<li><a href="#" class="">Koleksi</a></li>
+						<li><a href="#" class="">Repositori</a></li>
+						<li><a href="#" class="">Rekomendasi</a></li>
+						<li><a href="#" class="">Link</a></li>
+					</ul>
+				</div>
+				<div class="text-white mt-8">
+					<h1 class="font-bold">Follow Us</h1>
+					<div class="mt-4 flex gap-2">
+						<div class="w-12 h-12 rounded-full bg-slate-500"></div>
+						<div class="w-12 h-12 rounded-full bg-slate-500"></div>
+					</div>
+					<ul class="flex flex-col justify-start gap-2 items-start mt-4">
+						<li class="font-bold">
+							Email : <a href="#" class="font-normal">mizurikito@gmail.com</a>
+						</li>
+						<li class="font-bold">
+							Phone : <a href="#" class="font-normal">0859-1101-09054</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
 
 		<script>
 			const navbarNav = document.querySelector("#navbar-menu");
