belum responsive desktop

--- a/public/index.html
+++ b/public/index.html
@@ -158,11 +158,19 @@
 		<!-- End Hero -->
 
 		<!-- Section 1 -->
-		<section class="mb-20 pt-16">
+		<section class="mb-20 pt-16 lg:pt-36">
 			<div class="container">
-				<div>
-					<div data-aos="fade" data-aos-duration="2000">
-						<img src="../img/book-icon.webp" alt="" />
+				<div class="lg:flex justify-center gap-2">
+					<div
+						data-aos="fade"
+						data-aos-duration="2000"
+						class="lg:w-[192rem] lg:h-[28rem]"
+					>
+						<img
+							src="../img/book-icon.webp"
+							alt=""
+							class="w-full h-full object-cover"
+						/>
 					</div>
 					<div data-aos="fade-right" data-aos-duration="1500">
 						<h1 class="font-bold text-4xl">Kenapa harus membaca buku?</h1>
@@ -180,9 +188,9 @@
 		<!-- End Section 1 -->
 
 		<!-- Section 2 -->
-		<section class="mb-20">
+		<section class="mb-20 lg:pt-36">
 			<div class="container">
-				<div>
+				<div class="lg:flex flex-row-reverse gap-4">
 					<div class="flex flex-wrap gap-5 overflow-hidden">
 						<div
 							data-aos="fade-right"
@@ -195,6 +203,7 @@
 								<h1 class="font-medium text-2xl mt-4">Pengetahuan</h1>
 							</div>
 						</div>
+
 						<div
 							data-aos="fade-left"
 							class="w-full h-[10rem] rounded-xl bg-gradient-to-r from-yellow-400 to-amber-200"
@@ -230,12 +239,20 @@
 						</div>
 					</div>
 
-					<div data-aos="fade-right" data-aos-duration="1500" class="mt-8">
-						<h1 class="font-bold text-4xl mb-2">Kenapa harus membaca buku?</h1>
+					<div
+						data-aos="fade-right"
+						data-aos-duration="1500"
+						class="mt-8 lg:pr-8"
+					>
+						<h1 class="font-bold text-4xl lg:text-5xl mb-2">
+							Kenapa harus membaca buku?
+						</h1>
 
 						<div class="flex gap-4 items-center">
 							<i class="fa-solid fa-check text-blue-400"></i>
-							<p class="text-text-abu text-base font-medium mt-2">
+							<p
+								class="text-text-abu text-base font-medium mt-2 lg:mt-4 lg:text-xl"
+							>
 								Membaca buku membantu meningkatkan wawasan dan pemahaman tentang
 								berbagai topik, mulai dari ilmu pengetahuan, sejarah, sastra,
 								hingga budaya dan seni.
@@ -243,7 +260,9 @@
 						</div>
 						<div class="flex gap-4 items-center">
 							<i class="fa-solid fa-check text-blue-400"></i>
-							<p class="text-text-abu text-base font-medium mt-2">
+							<p
+								class="text-text-abu text-base font-medium mt-2 lg:mt-4 lg:text-xl"
+							>
 								Membaca buku merangsang perkembangan kognitif kita.Ini membantu
 								meningkatkan kemampuan berpikir kritis, logika, serta kemampuan
 								berbicara dan menulis.
@@ -251,7 +270,9 @@
 						</div>
 						<div class="flex gap-4 items-center">
 							<i class="fa-solid fa-check text-blue-400"></i>
-							<p class="text-text-abu text-base font-medium mt-2">
+							<p
+								class="text-text-abu text-base font-medium mt-2 lg:mt-4 lg:text-xl"
+							>
 								Buku membantu membangkitkan imajinasi dan kreativitas kita.
 								Ketika membaca, kita seringkali membayangkan dunia dan karakter
 								yang ada dalam buku tersebut.
@@ -259,7 +280,9 @@
 						</div>
 						<div class="flex gap-4 items-center">
 							<i class="fa-solid fa-check text-blue-400"></i>
-							<p class="text-text-abu text-base font-medium mt-2">
+							<p
+								class="text-text-abu text-base font-medium mt-2 lg:mt-4 lg:text-xl"
+							>
 								Membaca buku juga dapat menjadi cara yang baik untuk bersantai
 								dan menghibur diri. Buku juga dapat menjadi teman yang setia
 								dalam waktu luang dan mengisi kekosongan.
@@ -293,7 +316,7 @@
 							</div>
 							<main class="mt-[45%] container">
 								<h1 class="font-bold">WorldCat</h1>
-								<p class="text-[0.5rem]">
+								<p class="text-xs">
 									Menyajikan informasi terperinci tentang koleksi buku global!
 								</p>
 							</main>
@@ -305,7 +328,7 @@
 							</div>
 							<main class="mt-[45%] container">
 								<h1 class="font-bold">LibraryThing</h1>
-								<p class="text-[0.5rem]">
+								<p class="text-xs">
 									Menyediakan katalog online dengan informasi lengkap!
 								</p>
 							</main>
@@ -317,7 +340,7 @@
 							</div>
 							<main class="mt-[45%] container">
 								<h1 class="font-bold">Goodreads</h1>
-								<p class="text-[0.5rem]">
+								<p class="text-xs">
 									Platform yang memuat daftar lengkap buku beserta informasi
 									rinci!
 								</p>
@@ -330,7 +353,7 @@
 							</div>
 							<main class="mt-[45%] container">
 								<h1 class="font-bold">Open Library</h1>
-								<p class="text-[0.5rem]">
+								<p class="text-xs">
 									Koleksi buku digital yang menarik untuk dijelajahi!
 								</p>
 							</main>
