belum responsive deskto fix jsp

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 					</button>
 				</div>
 				<nav
-					class="absolute z-50 lg:static lg:flex justify-between items-center lg:top-0 w-full lg:w-auto h-[25rem] lg:h-auto nonactive left-0 bg-white lg:bg-transparent mx-auto lg:mx-0 duration-300 ease-in-out"
+					class="absolute z-50 lg:static lg:flex justify-between items-center lg:top-0 w-full lg:w-auto h-[25rem] lg:h-auto nonactive left-0 bg-white lg:bg-transparent mx-auto lg:mx-0 transition-all duration-300 ease-in-out"
 					id="navbar-menu"
 				>
 					<div
