tinggal fix tablet

--- a/public/index.html
+++ b/public/index.html
@@ -173,8 +173,10 @@
 						/>
 					</div>
 					<div data-aos="fade-right" data-aos-duration="1500">
-						<h1 class="font-bold text-4xl">Kenapa harus membaca buku?</h1>
-						<p class="text-text-abu text-lg font-medium mt-2">
+						<h1 class="font-bold text-4xl md:text-5xl">
+							Kenapa harus membaca buku?
+						</h1>
+						<p class="text-text-abu text-lg font-medium mt-2 md:text-2xl">
 							Membaca buku adalah kegiatan yang menawarkan pintu menuju dunia
 							pengetahuan yang tak terbatas. Dalam buku, terdapat fakta-fakta
 							yang mencerahkan dan memperluas wawasan kita. Dengan membaca, kita
@@ -190,7 +192,7 @@
 		<!-- Section 2 -->
 		<section class="mb-20 lg:pt-36">
 			<div class="container">
-				<div class="lg:flex flex-row-reverse gap-4">
+				<div class="lg:flex flex-row-reverse gap-4 justify-center">
 					<div class="flex flex-wrap gap-5 overflow-hidden">
 						<div
 							data-aos="fade-right"
@@ -244,14 +246,14 @@
 						data-aos-duration="1500"
 						class="mt-8 lg:pr-8"
 					>
-						<h1 class="font-bold text-4xl lg:text-5xl mb-2">
+						<h1 class="font-bold text-4xl md:text-5xl mb-2">
 							Kenapa harus membaca buku?
 						</h1>
 
 						<div class="flex gap-4 items-center">
 							<i class="fa-solid fa-check text-blue-400"></i>
 							<p
-								class="text-text-abu text-base font-medium mt-2 lg:mt-4 lg:text-xl"
+								class="text-text-abu text-base font-medium mt-2 lg:mt-4 md:text-xl"
 							>
 								Membaca buku membantu meningkatkan wawasan dan pemahaman tentang
 								berbagai topik, mulai dari ilmu pengetahuan, sejarah, sastra,
@@ -295,71 +297,82 @@
 		<!-- End Section 2 -->
 
 		<!-- Section 3 -->
-		<section class="bg-dasar mb-20 pb-16 rounded-br-[3rem]">
+		<section class="bg-dasar mb-20 pb-16 lg:py-32 rounded-br-[3rem]">
 			<div class="container">
-				<div class="pt-8 text-white">
-					<h2 class="text-base font-medium">
-						Alasan harus menggunakan Bookverse
-					</h2>
-					<h1 class="text-3xl font-bold py-2">Layanan Bookverse</h1>
-					<p class="text-sm opacity-80">
-						Bersama kami, Anda mendapatkan Buku Online dalam waktu yang cepat,
-						hemat anggaran, serta website yang telah kami optimalkan dan
-						tampilan layanan yang profesional!
-					</p>
-				</div>
-				<main class="mt-8 overflow-hidden">
-					<div class="grid grid-cols-2 gap-4">
-						<div class="gridlayout" data-aos="fade-down">
-							<div class="gridlayoutbox bg-red-icon bg-opacity-20">
-								<i class="fa-solid fa-paw text-red-400"></i>
-							</div>
-							<main class="mt-[55%] container">
-								<h1 class="font-bold">WorldCat</h1>
-								<p class="text-xs">
-									Menyajikan informasi terperinci tentang koleksi buku global!
-								</p>
-							</main>
-						</div>
-
-						<div class="gridlayout" data-aos="fade-left">
-							<div class="gridlayoutbox bg-yellow-400 bg-opacity-20">
-								<i class="fa-solid fa-layer-group text-yellow-500"></i>
-							</div>
-							<main class="mt-[55%] container">
-								<h1 class="font-bold">LibraryThing</h1>
-								<p class="text-xs">
-									Menyediakan katalog online dengan informasi lengkap!
-								</p>
-							</main>
-						</div>
-
-						<div class="gridlayout" data-aos="fade-right">
-							<div class="gridlayoutbox bg-blue-400 bg-opacity-20">
-								<i class="fa-solid fa-circle-check text-blue-500"></i>
-							</div>
-							<main class="mt-[55%] container">
-								<h1 class="font-bold">Goodreads</h1>
-								<p class="text-xs">
-									Platform yang memuat daftar lengkap buku beserta informasi
-									rinci!
-								</p>
-							</main>
-						</div>
-
-						<div class="gridlayout" data-aos="fade-up">
-							<div class="gridlayoutbox bg-slate-400 bg-opacity-20">
-								<i class="fa-solid fa-book-open-reader text-slate-500"></i>
-							</div>
-							<main class="mt-[55%] container">
-								<h1 class="font-bold">Open Library</h1>
-								<p class="text-xs">
-									Koleksi buku digital yang menarik untuk dijelajahi!
-								</p>
-							</main>
-						</div>
+				<div class="lg:flex lg:flex-row-reverse items-center gap-8">
+					<div class="pt-8 text-white">
+						<h2 class="text-base font-medium md:text-3xl">
+							Alasan harus menggunakan Bookverse
+						</h2>
+						<h1 class="text-3xl font-bold py-2 md:text-6xl">
+							Layanan Bookverse
+						</h1>
+						<p class="text-sm opacity-80 md:text-xl">
+							Bersama kami, Anda mendapatkan Buku Online dalam waktu yang cepat,
+							hemat anggaran, serta website yang telah kami optimalkan dan
+							tampilan layanan yang profesional!
+						</p>
 					</div>
-				</main>
+
+					<main class="mt-8 overflow-hidden w-full">
+						<div class="grid grid-cols-2 gap-4 w-full">
+							<div class="gridlayout" data-aos="fade-down">
+								<div class="gridlayoutbox bg-red-icon bg-opacity-20">
+									<i class="fa-solid fa-paw text-red-400 md:text-xl"></i>
+								</div>
+								<main class="mt-[55%] md:mt-[30%] lg:mt-[40%] container">
+									<h1 class="font-bold lg:text-xl md:text-3xl">WorldCat</h1>
+									<p class="text-xs lg:text-sm">
+										Menyajikan informasi terperinci tentang koleksi buku global!
+									</p>
+								</main>
+							</div>
+
+							<div class="gridlayout" data-aos="fade-left">
+								<div class="gridlayoutbox bg-yellow-400 bg-opacity-20">
+									<i
+										class="fa-solid fa-layer-group text-yellow-500 lg:text-xl"
+									></i>
+								</div>
+								<main class="mt-[55%] md:mt-[35%] lg:mt-[40%] container">
+									<h1 class="font-bold lg:text-xl">LibraryThing</h1>
+									<p class="text-xs lg:text-sm">
+										Menyediakan katalog online dengan informasi lengkap!
+									</p>
+								</main>
+							</div>
+
+							<div class="gridlayout" data-aos="fade-right">
+								<div class="gridlayoutbox bg-blue-400 bg-opacity-20">
+									<i
+										class="fa-solid fa-circle-check text-blue-500 lg:text-xl"
+									></i>
+								</div>
+								<main class="mt-[55%] lg:mt-[40%] container">
+									<h1 class="font-bold lg:text-xl">Goodreads</h1>
+									<p class="text-xs lg:text-sm">
+										Platform yang memuat daftar lengkap buku beserta informasi
+										rinci!
+									</p>
+								</main>
+							</div>
+
+							<div class="gridlayout" data-aos="fade-up">
+								<div class="gridlayoutbox bg-slate-400 bg-opacity-20">
+									<i
+										class="fa-solid fa-book-open-reader text-slate-500 lg:text-xl"
+									></i>
+								</div>
+								<main class="mt-[55%] lg:mt-[40%] container">
+									<h1 class="font-bold lg:text-xl">Open Library</h1>
+									<p class="text-xs lg:text-sm">
+										Koleksi buku digital yang menarik untuk dijelajahi!
+									</p>
+								</main>
+							</div>
+						</div>
+					</main>
+				</div>
 			</div>
 		</section>
 
@@ -368,21 +381,23 @@
 		<!-- Section 4 -->
 		<section class="mb-20 w-full bg-cover">
 			<div class="container">
-				<div class="flex justify-between items-center">
+				<div class="flex justify-between lg:justify-evenly items-center">
 					<div>
-						<h1 class="font-bold text-3xl leading-none mb-4">
+						<h1
+							class="font-bold text-3xl leading-none mb-4 lg:mb-8 lg:text-7xl"
+						>
 							Mulai Baca<br />Sekarang.
 						</h1>
 						<a
 							href=""
-							class="px-4 py-2 rounded-full bg-black hover:bg-dasar transition duration-300 ease-in-out hover:text-black text-dasar text-sm"
+							class="px-4 py-2 lg:px-8 rounded-full bg-black hover:bg-dasar transition duration-300 ease-in-out hover:text-black text-dasar text-sm lg:text-4xl"
 							>Baca Buku</a
 						>
 					</div>
 					<div class="">
 						<div
 							data-aos="fade-down"
-							class="w-28 shadow-md overflow-hidden rounded-sm relative top-8"
+							class="w-28 lg:w-64 shadow-md overflow-hidden rounded-sm relative lg:left-8 lg:top-12 top-8"
 						>
 							<img
 								src="../img/konosuba.webp"
@@ -392,7 +407,7 @@
 						</div>
 						<div
 							data-aos="fade-up"
-							class="w-28 shadow-md overflow-hidden rounded-sm relative z-10 -top-16 right-8"
+							class="w-28 lg:w-64 shadow-md overflow-hidden rounded-sm relative z-10 -top-16 lg:-top-36 right-8"
 						>
 							<img
 								src="../img/konosuba.webp"
@@ -408,38 +423,40 @@
 
 		<footer class="py-20 bg-dasar">
 			<div class="container">
-				<div>
-					<h1 class="text-4xl text-white font-bold">Bookverse</h1>
-					<p class="text-white font-semibold">
-						Bookverse adalah situs perpustakaan online, penyedia e-book
-						berbahasa indonesia, mulai dari novel sampai skripsi.
-					</p>
-				</div>
-				<hr class="mt-2" />
-				<div class="text-white mt-4">
-					<h1 class="font-bold">Menu cepat</h1>
-					<ul class="flex flex-col justify-start gap-4 items-start">
-						<li><a href="#" class="">Beranda</a></li>
-						<li><a href="#" class="">Koleksi</a></li>
-						<li><a href="#" class="">Repositori</a></li>
-						<li><a href="#" class="">Rekomendasi</a></li>
-						<li><a href="#" class="">Link</a></li>
-					</ul>
-				</div>
-				<div class="text-white mt-8">
-					<h1 class="font-bold">Follow Us</h1>
-					<div class="mt-4 flex gap-2">
-						<div class="w-12 h-12 rounded-full bg-slate-500"></div>
-						<div class="w-12 h-12 rounded-full bg-slate-500"></div>
+				<div class="lg:flex justify-between">
+					<div class="lg:w-1/2">
+						<h1 class="text-4xl lg:text-6xl text-white font-bold">Bookverse</h1>
+						<p class="text-white font-semibold lg:text-xl">
+							Bookverse adalah situs perpustakaan online, penyedia e-book
+							berbahasa indonesia, mulai dari novel sampai skripsi.
+						</p>
 					</div>
-					<ul class="flex flex-col justify-start gap-2 items-start mt-4">
-						<li class="font-bold">
-							Email : <a href="#" class="font-normal">mizurikito@gmail.com</a>
-						</li>
-						<li class="font-bold">
-							Phone : <a href="#" class="font-normal">0859-1101-09054</a>
-						</li>
-					</ul>
+					<hr class="mt-2" />
+					<div class="text-white mt-4 lg:text-xl">
+						<h1 class="font-bold">Menu cepat</h1>
+						<ul class="flex flex-col justify-start gap-4 items-start">
+							<li><a href="#" class="">Beranda</a></li>
+							<li><a href="#" class="">Koleksi</a></li>
+							<li><a href="#" class="">Repositori</a></li>
+							<li><a href="#" class="">Rekomendasi</a></li>
+							<li><a href="#" class="">Link</a></li>
+						</ul>
+					</div>
+					<div class="text-white mt-8 lg:text-xl">
+						<h1 class="font-bold">Follow Us</h1>
+						<div class="mt-4 flex gap-2">
+							<div class="w-12 h-12 rounded-full bg-slate-500"></div>
+							<div class="w-12 h-12 rounded-full bg-slate-500"></div>
+						</div>
+						<ul class="flex flex-col justify-start gap-2 items-start mt-4">
+							<li class="font-bold">
+								Email : <a href="#" class="font-normal">mizurikito@gmail.com</a>
+							</li>
+							<li class="font-bold">
+								Phone : <a href="#" class="font-normal">0859-1101-09054</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</footer>
